--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,58 @@ body {
     color: #1ab188; /* Link hover color */
 }
 
+.nav-search-section {
+    flex: 1;
+    max-width: 850px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+}
+  
+.search-bar {
+    flex: 1;
+    width: 0;
+    font-size: 16px;
+    height: 39px;
+    padding-left: 15px;
+    border: none;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+  
+.search-button {
+    background-color: rgb(254, 189, 105);
+    border: none;
+    width: 45px;
+    height: 39px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    flex-shrink: 0;
+}
+  
+.search-icon {
+    height: 22px;
+    margin-left: 2px;
+    margin-top: 3px;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
     .navbar {
         flex-direction: column; /* Stack links vertically */
     }
+
+    .navbar-brand {
+        margin-bottom: 14px;
+    }
     
+    .nav-search-section { 
+        min-width: 80%;
+    }
+
+
     .navbar-links {
         flex-direction: column; /* Stack links vertically */
         margin-top: 10px;
