--- a/css/signup.css
+++ b/css/signup.css
@@ -8,11 +8,66 @@ ody {
     margin: 0;
 }
 
+.navbar {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black; /* Navbar background color */
+    padding: 15px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.navbar-brand {
+    color: white; /* Brand color */
+    font-size: 1.5em;
+}
+
+.navbar-links {
+    list-style: none; /* Remove bullet points */
+    display: flex; /* Align links in a row */
+}
+
+.navbar-links li {
+    margin-left: 20px; /* Space between links */
+}
+
+.navbar-links a {
+    color: white; /* Link color */
+    text-decoration: none; /* Remove underline */
+    font-size: 1em;
+}
+
+.navbar-links a:hover {
+    color: #1ab188; /* Link hover color */
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column; /* Stack links vertically */
+    }
+    
+    .navbar-links {
+        flex-direction: column; /* Stack links vertically */
+        margin-top: 10px;
+        align-items: center; /* Center the links */
+    }
+    
+    .navbar-links li {
+        margin: 10px 0; /* Space between links */
+    }
+}
+
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 100px;
 }
 
 .signup-box {
