--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-s* {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -119,8 +119,12 @@ header {
     /* padding: 3px; */
 
 }
-
-
+.separation{
+    position: absolute;
+    top: 100vh;
+    left: 0;
+    right: 0;
+}
 /* Responsive styles */
 @media (max-width: 768px) {
     .navbar {
@@ -137,33 +141,6 @@ header {
         margin: 10px 0; /* Space between links */
     }
 }
-
-
-.back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #007BFF; /* Button color */
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 16px;
-    display: none; 
-    z-index: 1000;
-    transition: background-color 0.3s;
-}
-
-.back-to-top:hover {
-    background-color: #0056b3; /* Darker on hover */
-}
-
-/* Show the button when scrolled down */
-.show {
-    display: block !important;
-}
-
 
 /*----footer---*/
 footer {
@@ -252,61 +229,3 @@ footer {
         font-size: 14px;
     }
 }
-
-/* CSS for products*/
-.hero-section img{
-    width: 100%;
-}
-.hero-msg p{
-    background-color: #e2e7e6;
-    color: black;
-    height: 50px;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: small;
-    margin-left: 320px;
-    
-    
-}
-.hero-msg a{
-    color: #007185;
-    margin-top: 4px;
-}
-
-.box{
-    border:2px solid white;
-    height: 365px;
-    width: 22.5%;
-    background-color: white;
-    padding: 20px 0px 15px;
-    margin-bottom: 15px;
-}
-
-.shop-section{
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: #e2e7e6;
-    margin-top: 50px;
-}
-
-.box img{
-    height: 300px;
-    width:90%;
-    margin-top: 10px;
-}
-.box-content{
-    margin-left: 18px;
-    margin-top: 5px;
-}
-.box a{
-    color:#007185;
-}
-.box h2{
-    margin-top:0;
-    font-weight: bolder;
-    font-size: 20px;
-}
-
